--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bmp-js": "^0.1.0",
     "browser-fs-access": "^0.34.0",
     "jimp": "^0.3.5",
     "react": "^18.2.0",
