--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "floyd-steinberg": "^1.0.6",
     "jimp": "^0.22.10",
     "react": "^18.2.0",
+    "react-advanced-cropper": "^0.19.3",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "react-top-loading-bar": "^2.3.1",
