--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lightnote-app",
   "version": "0.1.0",
+  "homepage": "https://cardonabits.github.io/lightnote-app/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^6.0.1",
